RESOLVED FIXED274434
Suppress virtual destructor and uncounted member variable warnings in WTF
https://bugs.webkit.org/show_bug.cgi?id=274434
Summary Suppress virtual destructor and uncounted member variable warnings in WTF
Ryosuke Niwa
Reported 2024-05-20 19:58:37 PDT
Suppress webkit.NoUncountedMemberChecker and webkit.RefCntblBaseVirtualDtor in a few places.
Attachments
Ryosuke Niwa
Comment 1 2024-05-20 20:17:29 PDT
EWS
Comment 2 2024-05-21 09:51:41 PDT
Committed 279061@main (e3948fcf9266): <https://commits.webkit.org/279061@main> Reviewed commits have been landed. Closing PR #28823 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-21 09:52:16 PDT
Fujii Hironori
Comment 4 2024-05-21 14:14:28 PDT
Regressed: Bug 274484 – REGRESSION(279061@main): [Win] error: 'suppress' attribute only applies to variables and statements
Note You need to log in before you can comment on or make changes to this bug.