Suppress virtual destructor and uncounted member variable warnings in WTF https://bugs.webkit.org/show_bug.cgi?id=274434

Reviewed by David Kilzer.

Suppress webkit.NoUncountedMemberChecker and webkit.RefCntblBaseVirtualDtor in a few places.

This PR moves inline functions out of line for classes with virtual destructor warning suppressions
so that other checkers will continue to apply to their contents.

* Source/WTF/wtf/Compiler.h:
* Source/WTF/wtf/JSONValues.h:
(WTF::JSONImpl::ObjectBase): Suppress the lack of virtual destructor warning.
(WTF::JSONImpl::ArrayBase): Ditto.
* Source/WTF/wtf/text/AtomStringImpl.cpp:
* Source/WTF/wtf/text/AtomStringImpl.h:
(WTF::AtomStringImpl): Ditto.
(WTF::AtomStringImpl::lookUp): Moved out of line so that other checkers will continue to apply to
function contents.
(WTF::AtomStringImpl::add): Ditto.
(WTF::AtomStringImpl::addCString): Ditto.
(WTF::AtomStringImpl::addWithStringTableProvider): Ditto.
* Source/WTF/wtf/text/StringConcatenate.h:
(WTF::StringTypeAdapter): Suppress the uncounted member variable warning.
* Source/WTF/wtf/text/StringView.cpp:
(WTF::StringView::UnderlyingString): Ditto.
* Source/WTF/wtf/text/SymbolImpl.h:
(WTF::SymbolImpl::SymbolImpl): Suppress the lack of virtual destructor warning.
(WTF::SymbolImpl::SymbolImpl): Moved out of line so that other checkers will continue to apply to
function contents.
(WTF::SymbolImpl::StaticSymbolImpl::StaticSymbolImpl): Ditto.
* Source/WTF/wtf/text/UniquedStringImpl.h:
(WTF::UniquedStringImpl): Suppress the lack of virtual destructor warning.
(WTF::UniquedStringImpl::UniquedStringImpl): Moved out of line so that other checkers will continue
to apply to function contents.

Canonical link: https://commits.webkit.org/279061@main