Source/WTF/wtf/JSONValues.h
@@ -170,7 +170,7 @@ private:
     } m_value;
 };
 
-class ObjectBase : public Value {
+class SUPPRESS_REFCOUNTED_WITHOUT_VIRTUAL_DESTRUCTOR ObjectBase : public Value {
 private:
     friend class Value;
     using DataStorage = HashMap<String, Ref<Value>>;
@@ -261,7 +261,7 @@ public:
 };
 
 
-class WTF_EXPORT_PRIVATE ArrayBase : public Value {
+class SUPPRESS_REFCOUNTED_WITHOUT_VIRTUAL_DESTRUCTOR WTF_EXPORT_PRIVATE ArrayBase : public Value {
 private:
     friend class Value;
     using DataStorage = Vector<Ref<Value>>;
